--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -69,11 +69,14 @@ a {
 
 .container {
   display: grid;
-  grid-template-rows: 100vh;
+  grid-template-rows: 100vh min-content 40vw;
   grid-template-columns:
     [full-start]minmax(6rem, 1fr) [center-start]repeat(
       8,
       [col-start] minmax(min-content, 14rem) [col-end]
     )
     [center-end]minmax(6rem, 1fr) [full-end];
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-rows: 100vh;
+  }
 }
