--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,12 +1,20 @@
 .work {
   background-color: $color-secondary;
-  grid-column: center-start / center-end;
-  padding: 10rem 4rem;
+  background-image: linear-gradient(
+      rgba($color-white, 0.9),
+      rgba($color-white, 0.5)
+    ),
+    url(layers.jpg);
+  background-size: cover;
+
+  grid-column: full-start / full-end;
+  padding: 10rem 10rem;
   display: grid;
   align-content: center;
   justify-content: center;
   justify-items: center;
   grid-row-gap: 5rem;
+  opacity: 0.95;
 
   @media only screen and (max-width: $bp-small) {
     grid-column: full-start / full-end;
@@ -29,10 +37,10 @@
 
   &__list {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 1fr 3fr;
     grid-column-gap: 2rem;
     grid-row-gap: 5vh;
-    align-items: center;
+    align-items: start;
 
     @media only screen and (max-width: $bp-small) {
       grid-template-columns: 1fr;
@@ -56,5 +64,4 @@
       margin-bottom: 4rem;
     }
   }
-
 }
