--- a/css/style.css
+++ b/css/style.css
@@ -49,9 +49,10 @@ a {
 
 .heading-1 {
   font-size: 6rem;
-  color: #f9f7f6;
+  color: #fff;
   line-height: 1;
-  margin: 0 0 20px 0; }
+  margin: 3rem 0 5rem;
+  box-shadow: 0px 6px 0px 0px #f1f2f3; }
   .heading-1--dark {
     color: #757575; }
 
@@ -89,7 +90,7 @@ a {
   cursor: pointer;
   transition: all 0.2s; }
   .btn:hover {
-    background-color: #1e726a; }
+    background-color: #051627; }
 
 .fa_menu {
   font-size: 2.2rem; }
@@ -333,7 +334,7 @@ a {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-column-gap: 2rem;
-    grid-row-gap: 5vh;
+    grid-row-gap: 10vh;
     align-items: start; }
     @media only screen and (max-width: 37.5em) {
       .work__list {
