--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -30,10 +30,11 @@
 
   &__list {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 2fr 3fr;
     grid-column-gap: 2rem;
     grid-row-gap: 10vh;
     align-items: start;
+    margin: 0 10rem;
 
     @media only screen and (max-width: $bp-small) {
       grid-template-columns: 1fr;
