--- a/css/style.css
+++ b/css/style.css
@@ -323,7 +323,7 @@ a {
       grid-column: full-start / full-end;
       padding: 10rem 5rem; } }
   .work img {
-    width: 90%; }
+    width: 100%; }
   @media only screen and (max-width: 37.5em) {
     .work h3 {
       font-size: 4.6rem; } }
@@ -335,15 +335,15 @@ a {
     grid-template-columns: 2fr 3fr;
     grid-column-gap: 2rem;
     grid-row-gap: 10vh;
-    align-items: start;
-    margin: 0 10rem; }
-    @media only screen and (max-width: 37.5em) {
+    align-items: start; }
+    @media only screen and (max-width: 75em) {
       .work__list {
         grid-template-columns: 1fr;
         grid-row-gap: 0vh; } }
   .work__img {
     border-radius: 1%;
-    display: block; }
+    display: block;
+    margin-bottom: 10rem; }
   .work__details {
     text-transform: uppercase;
     color: #9299a0;
