--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $color-primary-dark;
+  background-color: $color-secondary;
   grid-column: full-start / full-end;
   padding: 5rem;
 }
