--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -2,10 +2,8 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(
-        rgba($color-primary, 0.5),
-        rgba($color-grey-light-1, 0.5)
-      ),
+    background-image: linear-gradient(rgba($color-primary, 0.5),
+      rgba($color-grey-light-1, 0.5)),
       url("../img/img2.jpg");
     background-size: cover;
 
@@ -13,6 +11,7 @@
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+
     @media only screen and (max-width: $bp-medium) {
       grid-column: 1 / -1;
       padding: 6rem;
@@ -25,6 +24,7 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
+
     @media only screen and (max-width: $bp-medium) {
       grid-column: 1 / 5;
       grid-row: 1 / -1;
@@ -37,6 +37,7 @@
     grid-column: 4 / 7;
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
+
     @media only screen and (max-width: $bp-medium) {
       grid-row: 1 / -1;
       width: 100%;
@@ -51,15 +52,18 @@
     display: grid;
     align-content: center;
     justify-items: start;
+
     @media only screen and (max-width: $bp-medium) {
       grid-column: 1 / -1;
       grid-row: 3 / 4;
     }
   }
+
   &__text {
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     font-style: italic;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    color: $color-grey-dark-1;
     // &:last-of-type {
     //   margin-bottom: 4rem;
     // }
