--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,14 +7,16 @@ $color-secondary: #051627;
 $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #9299a0;
 
-$color-grey-dark-1: #757575;
+$color-grey-dark-1: #6F7781;
 $color-grey-dark-2: #6d5d4b;
 
 $color-white: #fff;
 $color-black: #000;
 // FONT VARIABLES
-$font-primary: "spartan_regular", sans-serif;
-$font-display: "sk", sans-serif;
+$font-primary: "spartan_regular",
+sans-serif;
+$font-display: "sk",
+sans-serif;
 
 // RESPONSIVE BREAKPOINTS
 $bp-largest: 75em; // 1200px
@@ -52,7 +54,7 @@ html {
 
 body {
   font-family: $font-primary;
-  color: $color-grey-dark-2;
+  color: $color-secondary;
   font-weight: 300;
   line-height: 1.6;
 }
@@ -72,11 +74,9 @@ a {
   background: $color-secondary;
   grid-template-rows: 100vh min-content 40vw;
   grid-template-columns:
-    [full-start]minmax(6rem, 1fr) [center-start]repeat(
-      8,
-      [col-start] minmax(min-content, 14rem) [col-end]
-    )
-    [center-end]minmax(6rem, 1fr) [full-end];
+    [full-start]minmax(6rem, 1fr) [center-start]repeat(8,
+    [col-start] minmax(min-content, 14rem) [col-end]) [center-end]minmax(6rem, 1fr) [full-end];
+
   @media only screen and (max-width: $bp-medium) {
     grid-template-rows: 100vh;
   }
