--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -6,7 +6,17 @@
   justify-content: center;
   justify-items: center;
   grid-row-gap: 5rem;
-  opacity: 1;
+  opacity: 0.85;
+
+  background-image: linear-gradient(
+      to right,
+      rgba($color-white, 0.95),
+      rgba($color-white, 0.5)
+    ),
+    url(../img/abstract_green.png);
+  background-size: center;
+  background-position: right;
+  background-attachment: fixed;
 
   @media only screen and (max-width: $bp-small) {
     grid-column: full-start / full-end;
@@ -45,7 +55,7 @@
     // width: 80rem;
     border-radius: 1%;
     display: block;
-    margin-bottom: 10rem;
+    margin-bottom: 3rem;
   }
 
   &__details {
