--- a/css/style.css
+++ b/css/style.css
@@ -326,9 +326,9 @@ a {
   justify-items: center;
   grid-row-gap: 5rem;
   opacity: 0.85;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(55, 200, 147, 0.5)), url(../img/hustle.jpg);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1464600923926-4ff72f9505f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
   background-size: cover;
-  background-position: left;
+  background-position: bottom;
   background-attachment: fixed; }
   @media only screen and (max-width: 37.5em) {
     .work {
