--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -64,9 +64,10 @@
     font-weight: bold;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
-    background-image: url(https://media.giphy.com/media/3o7aCXWbxbI2W1GCPe/giphy.gif);
-    background-position: center;
-    -webkit-background-clip: text;
+    background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
+background-position: center;
+background-size: contain;
+-webkit-background-clip: text;
 
     @media only screen and (max-width: $bp-large) {
       letter-spacing: 4rem;
