--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,9 @@ a {
     margin-right: -6rem;
     font-size: 10.5rem;
     font-weight: bold;
-    background-image: url(https://media.giphy.com/media/3o7aCXWbxbI2W1GCPe/giphy.gif);
+    background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
     background-position: center;
+    background-size: contain;
     -webkit-background-clip: text; }
     @media only screen and (max-width: 62.5em) {
       .header__big {
@@ -309,7 +310,7 @@ a {
   height: 100%;
   width: 100%;
   z-index: -1;
-  opacity: .1;
+  opacity: 1;
   overflow: hidden;
   object-fit: cover; }
   .bg-video__content {
