--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -58,16 +58,17 @@
     justify-self: center;
     color: transparent;
     text-transform: uppercase;
+    font-family: 'sui', sans-serif;
     letter-spacing: 6rem;
     margin-right: -6rem;
-    font-size: 10.5rem;
-    font-weight: bold;
+    font-size: 9.5rem;
+    font-weight: 100;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
     background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
-background-position: center;
-background-size: contain;
--webkit-background-clip: text;
+    background-position: center;
+    background-size: contain;
+    -webkit-background-clip: text;
 
     @media only screen and (max-width: $bp-large) {
       letter-spacing: 4rem;
@@ -97,7 +98,7 @@ background-size: contain;
     grid-column: 1/ -1;
     justify-self: center;
     align-self: center;
-    font: bold 8.5rem "sk", sans-serif;
+    font: 8rem "montserrat_bold", sans-serif;
     color: $color-black;
     margin: 3rem 0 -1rem 0;
 
@@ -115,7 +116,7 @@ background-size: contain;
     grid-column: 1 / -1;
     justify-self: center;
     align-self: center;
-    font: bold 8.5rem "sk", sans-serif;
+    font: 8rem "montserrat_bold", sans-serif;
     color: $color-black;
 
     @media only screen and (max-width: $bp-medium) {
