--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -10,10 +10,10 @@
 
   background-image: linear-gradient(
       to right,
-      rgba($color-black, 0.85),
-      rgba($color-black, 0.5)
+      rgba($color-secondary, 0.85),
+      rgba($color-secondary, 0.5)
     ),
-    url(https://images.unsplash.com/photo-1464600923926-4ff72f9505f3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+    url(https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
