updated work section

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html {
 
 body {
   font-family: "spartan_regular", sans-serif;
-  color: #051627;
+  color: #1f1e1c;
   font-weight: 300;
   line-height: 1.6; }
 
@@ -44,8 +44,8 @@ a {
 
 .container {
   display: grid;
-  background: #051627;
-  grid-template-rows: 100vh min-content 40vw;
+  background: #1f1e1c;
+  grid-template-rows: 100vh min-content 50vw;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 50em) {
     .container {
@@ -69,11 +69,11 @@ a {
   color: #fff;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px #051627; }
+  box-shadow: 0px 6px 0px 0px #1f1e1c; }
   .heading-2--light {
     color: #f9f7f6; }
   .heading-2--dark {
-    color: #051627; }
+    color: #1f1e1c; }
 
 .heading-3 {
   font-size: 2rem;
@@ -100,7 +100,7 @@ a {
   cursor: pointer;
   transition: all 0.2s; }
   .btn:hover {
-    background-color: #051627; }
+    background-color: #1f1e1c; }
 
 .fa_menu {
   font-size: 2.2rem; }
@@ -110,7 +110,7 @@ a {
 
 .mb-sm {
   margin-bottom: 4rem;
-  color: #051627;
+  color: #1f1e1c;
   text-align: center;
   box-shadow: none; }
 
@@ -336,7 +336,7 @@ a {
   justify-items: center;
   grid-row-gap: 5rem;
   opacity: 0.85;
-  background-image: linear-gradient(to right, rgba(5, 22, 39, 0.85), rgba(5, 22, 39, 0.5)), url(https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-image: linear-gradient(to right, rgba(31, 30, 28, 0.85), rgba(31, 30, 28, 0.5)), url(https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed; }
@@ -381,21 +381,23 @@ a {
   grid-column: full-start / col-end 4;
   background-image: linear-gradient(rgba(58, 207, 202, 0.5), rgba(249, 247, 246, 0.5)), url("../img/img2.jpg");
   background-size: cover;
+  background-position: right;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
   align-items: center; }
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: 62.5em) {
     .about__pictures {
       grid-column: 1 / -1;
-      padding: 6rem; } }
+      padding: 6rem;
+      height: 40vh; } }
 
 .about__img--1 {
   width: 100%;
   grid-row: 2 / 6;
   grid-column: 2 / 6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: 62.5em) {
     .about__img--1 {
       grid-column: 1 / 5;
       grid-row: 1 / -1; } }
@@ -406,7 +408,7 @@ a {
   grid-column: 4 / 7;
   z-index: 20;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: 62.5em) {
     .about__img--2 {
       grid-row: 1 / -1;
       width: 100%; } }
@@ -418,7 +420,7 @@ a {
   display: grid;
   align-content: center;
   justify-items: start; }
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: 62.5em) {
     .about__content {
       grid-column: 1 / -1;
       grid-row: 3 / 4; } }
@@ -526,7 +528,7 @@ a {
   transform: translateY(-4rem); }
 
 .footer {
-  background-color: #051627;
+  background-color: #1f1e1c;
   grid-column: full-start / full-end;
   padding: 5rem; }
 
