--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -2,19 +2,24 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(rgba($color-primary, 0.5),
-      rgba($color-grey-light-1, 0.5)),
+    background-image: linear-gradient(
+        rgba($color-primary, 0.5),
+        rgba($color-grey-light-1, 0.5)
+      ),
       url("../img/img2.jpg");
     background-size: cover;
+
+    background-position: right;
 
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1 / -1;
       padding: 6rem;
+      height: 40vh;
     }
   }
 
@@ -25,7 +30,7 @@
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, 0.1);
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1 / 5;
       grid-row: 1 / -1;
     }
@@ -38,7 +43,7 @@
     z-index: 20;
     box-shadow: 0 2rem 5rem rgba(#000, 0.2);
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       grid-row: 1 / -1;
       width: 100%;
     }
@@ -53,7 +58,7 @@
     align-content: center;
     justify-items: start;
 
-    @media only screen and (max-width: $bp-medium) {
+    @media only screen and (max-width: $bp-large) {
       grid-column: 1 / -1;
       grid-row: 3 / 4;
     }
