--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ a {
   justify-items: center;
   grid-row-gap: 5rem;
   opacity: 0.85;
-  background-image: linear-gradient(to right, rgba(31, 30, 28, 0.85), rgba(31, 30, 28, 0.5)), url(https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-image: linear-gradient(to right, rgba(31, 30, 28, 0.85), rgba(31, 30, 28, 0.5)), url(https://images.unsplash.com/photo-1464621922360-27f3bf0eca75?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed; }
@@ -379,7 +379,7 @@ a {
 .about__pictures {
   background-color: #3acfca;
   grid-column: full-start / col-end 4;
-  background-image: linear-gradient(to left, rgba(31, 30, 28, 0.5), rgba(58, 207, 202, 0.5)), url("../img/img2.jpg");
+  background-image: linear-gradient(to right top, rgba(31, 30, 28, 0.5), rgba(58, 207, 202, 0.5)), url("../img/img2.jpg");
   background-size: cover;
   background-position: right;
   display: grid;
