--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -3,7 +3,7 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(
-        to left,
+        to right top,
         rgba($color-secondary, 0.5),
         rgba($color-primary, 0.5)
       ),
