--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -3,8 +3,8 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(
-        to right top,
-        rgba($color-secondary, 0.5),
+        to top,
+        rgba($color-secondary, 0.85),
         rgba($color-primary, 0.5)
       ),
       url("../img/img2.jpg");
