--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,19 +1,14 @@
 .work {
   grid-column: full-start / full-end;
-  padding: 10rem 10rem;
+  padding: 10rem 14rem;
   display: grid;
   align-content: center;
   justify-content: center;
   justify-items: center;
   grid-row-gap: 5rem;
-  opacity: 0.85;
+  opacity: 1;
 
-  background-image: linear-gradient(
-      to right,
-      rgba($color-secondary, 0.85),
-      rgba($color-secondary, 0.5)
-    ),
-    url(https://images.unsplash.com/photo-1496150458551-140441714f2f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
+  background-image: linear-gradient(to bottom right, #0c0c0c, #171717ab), url(work_bg.jpg);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
@@ -39,9 +34,9 @@
 
   &__list {
     display: grid;
-    grid-template-columns: 2fr 3fr;
-    grid-column-gap: 2rem;
-    grid-row-gap: 10vh;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 8vh;
     align-items: start;
 
     @media only screen and (max-width: $bp-largest) {
@@ -65,8 +60,17 @@
     font-size: 1.8rem;
     margin-bottom: 3rem;
 
+
     @media only screen and (max-width: $bp-small) {
       margin-bottom: 4rem;
     }
+
+    p {
+      width: 80%;
+    }
   }
+}
+
+.work_button {
+  margin-top: 3rem;
 }
