--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -2,10 +2,7 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
-    background-image: linear-gradient(
-        rgba($color-primary, 0.5),
-        rgba($color-grey-light-1, 0.5)
-      ),
+    background-image:
       url("../img/img2.jpg");
     background-size: cover;
 
