--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ a {
 .container {
   display: grid;
   background: #1F1E1C;
-  grid-template-rows: 100vh min-content 40vw;
+  grid-template-rows: 100vh min-content 50vw;
   grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 50em) {
     .container {
@@ -114,11 +114,11 @@ a {
   text-align: center;
   box-shadow: none; }
 
+.mb-sm-1 {
+  padding: 3rem 0; }
+
 .cnt {
   box-shadow: 0px 6px 0px 0px #051627; }
-
-.mb-md {
-  margin-bottom: 3rem; }
 
 .mb-lg {
   margin-bottom: 4rem; }
@@ -321,7 +321,8 @@ a {
   z-index: -1;
   opacity: 1;
   overflow: hidden;
-  object-fit: cover; }
+  object-fit: cover;
+  opacity: .3; }
   .bg-video__content {
     height: 100%;
     width: 100%;
@@ -336,7 +337,7 @@ a {
   justify-items: center;
   grid-row-gap: 5rem;
   opacity: 1;
-  background-image: linear-gradient(to bottom right, #0c0c0c, #171717ab), url(work_bg.jpg);
+  background-image: linear-gradient(to bottom right, #1F1E1C, #1f1e1bad), url(work_bg.jpg);
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed; }
@@ -369,13 +370,13 @@ a {
   .work__details {
     text-transform: uppercase;
     color: #9299a0;
-    margin-top: 2rem;
     font-size: 1.8rem;
     margin-bottom: 3rem; }
     @media only screen and (max-width: 37.5em) {
       .work__details {
         margin-bottom: 4rem; } }
     .work__details p {
+      margin-top: 2rem;
       width: 80%; }
 
 .work_button {
@@ -384,7 +385,7 @@ a {
 .about__pictures {
   background-color: #F84525;
   grid-column: full-start / col-end 4;
-  background-image: linear-gradient(rgba(248, 69, 37, 0.5), rgba(249, 247, 246, 0.5)), url("../img/img2.jpg");
+  background-image: url("../img/img2.jpg");
   background-size: cover;
   background-position: right;
   display: grid;
