--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -86,12 +86,16 @@
   box-shadow: none;
 }
 
+.mb-sm-1 {
+  padding: 3rem 0;
+}
+
 .cnt {
   box-shadow: 0px 6px 0px 0px #051627;
 }
 
 .mb-md {
-  margin-bottom: 3rem;
+  
 }
 
 .mb-lg {
