--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -9,7 +9,7 @@
   color: $color-white;
   line-height: 1;
   margin: 3rem 0 5rem;
-  box-shadow: 0px 6px 0px 0px #f1f2f3;
+  box-shadow: 0px 6px 0px 0px $color-white;
 
   &--dark {
     color: $color-grey-dark-1;
@@ -18,7 +18,7 @@
 
 .heading-2 {
   @extend %heading;
-  font-size: 6rem;
+  font-size: 8rem;
   color: $color-white;
   line-height: 1;
   margin: 3rem 0 5rem;
@@ -94,9 +94,7 @@
   box-shadow: 0px 6px 0px 0px #051627;
 }
 
-.mb-md {
-  
-}
+.mb-md {}
 
 .mb-lg {
   margin-bottom: 4rem;
