--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -58,16 +58,16 @@
     justify-self: center;
     color: transparent;
     text-transform: uppercase;
-    font-family: 'sui', sans-serif;
+    font-family: "sui", sans-serif;
     letter-spacing: 6rem;
     margin-right: -6rem;
     font-size: 9.5rem;
     font-weight: 100;
     // opacity: 0.8;
     // text-shadow: 4px 2px 0px #051627;
-    background-image: url(https://media.giphy.com/media/xULW8tsT4LoKPqeyFW/giphy.gif);
+    background-image: url(https://media.giphy.com/media/2UELldv7Yc7lTgjoDg/giphy.gif);
     background-position: center;
-    background-size: contain;
+    background-size: cover;
     -webkit-background-clip: text;
 
     @media only screen and (max-width: $bp-large) {
